# google-ocr-mcp-server

./: .env.example  Makefile  README.md  pyproject.toml  smithery.yaml
src/google_ocr_mcp_server/: server.py  settings.py
